# FourInARow

./: .gitignore  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  board.py  fourInARow.py  four_in_a_row.py  history.py  pyproject.toml  requirements.txt  updateoliver.txt
.github/workflows/: super-linter.yml  test-and-coverage.yml
classes/: history.py  history_view.py  show_board.py
doc/: software_architecture.md
engine/: __init__.py  ai_minimax.py  ai_negamax.py  ai_negamax_3.py  ai_random.py  bot_minimax.py
modules/: history.py  history_view.py  safe_inputs.py  show_board.py
test/: test_board.py  test_history.py  test_history_view.py  test_main.py  test_show_board.py
test/enginetests/: test_ai_negamax.py  test_minimax.py
test/moduletests/: test_history.py  test_main.py
web/: four_in_a_row.html
web/css/: login_and_register.css  main_menu.css  standard_design.css
web/javascript/: login_and_register.js  main_menu.js
